--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>PartyPlanner</title>
 </head>
 <body>
-   <script src="index.js"></script> 
+    <div id="cards"></div>
+    <script src="index.js"></script> 
 </body>
 </html>
